Update Views and Photo Profile

--- a/Soporte/SoporteWeb/Content/style.css
+++ b/Soporte/SoporteWeb/Content/style.css
@@ -9553,3 +9553,7 @@ textarea.form-control {
 .Masticas{
     background-image:url(/Imgs/work.jpg);
 }
+
+.sacas{
+    background-image:url(/Imgs/maquina.jpg);
+}
