--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<SoporteWeb.Models.Costo>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Trabajos";
 }
 <div class="Muerdes">
     <br />
