--- a/Soporte/SoporteWeb/Views/Profile/Details.cshtml
+++ b/Soporte/SoporteWeb/Views/Profile/Details.cshtml
@@ -12,12 +12,12 @@
 
 
 
-    <div class="ml-5">
+    <div>
 
 
-        <div class="row col-md-offset-2 ml-5">
-            <div class="col-md-10 mt-5 ml-5">
-                <div class="card ml-5">
+        <div class="row justify-content-center ">
+            <div class="col-md-10 mt-5 ">
+                <div class="card row justify-content-center">
                     <div class="card-header bg-dark">
                         <h4 class="m-0 text-center text-white">Perfil @User.Identity.Name</h4>
                     </div>
@@ -106,13 +106,13 @@
                         <div class="col-md-12">
                             <input type="text" value="" name="PhoneNumber" placeholder="Telefono" class="form-control" />
                         </div>
-                        @*Colocar los renglones faltanes ( Descripcion Musica, Hobies y videos y colocar la linea)*@
+                        
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
                             <input type="text" value="" name="Description" placeholder="Descripción" class="form-control" />
                         </div>
-                        @*Colocar los renglones faltanes ( Descripcion Musica, Hobies y videos y colocar la linea)*@
+                      
                     </div>
                     <div class="form-group">
                         <div class="col-md-12">
