--- a/Soporte/SoporteWeb/Views/Home/About.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/About.cshtml
@@ -1,85 +1,168 @@
 ﻿@{
     ViewBag.Title = "Acerca de Nosotros";
+    Layout = null;
 }
 
-<div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="~/Imgs/a1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Tecnologia</h5>
 
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="~/Imgs/a2.jpg" class="d-block w-100 " alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Contabilidad</h5>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - Technical Support</title>
+    @Styles.Render("~/Content/css")
+    @* Agregamos Font Awasome para agregar iconos *@
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="~/Imgs/a3.jpg" class="d-block w-100 " alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Auditoria</h5>
 
-                </div>
+    <link rel="stylesheet" href="~/Content/animate.css">
+
+    <link rel="stylesheet" href="~/Content/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Content/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/Content/magnific-popup.css">
+
+
+
+    <link rel="stylesheet" href="~/Content/ionicons.min.css">
+
+    <link rel="stylesheet" href="~/Content/flaticon.css">
+    <link rel="stylesheet" href="~/Content/icomoon.css">
+    <link rel="stylesheet" href="~/Content/style.css">
+
+    @Scripts.Render("~/bundles/modernizr")
+
+</head>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="https://localhost:44363/"><span>Technical Support</span></a>
+            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav nav ml-auto">
+
+                    <li class="nav-item"><a href="@Url.Action("Index","Home")" class="nav-link">Inicio</a> </li>
+                    <li class="nav-item"><a href="@Url.Action("About","Home")" class="nav-link">Acerca</a> </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item"><a href="@Url.Action("Index","Tipoes")" class="nav-link">Servicios</a> </li>
+                        <li class="nav-item"><a href="@Url.Action("Index","Costoes")" class="nav-link">Trabajos</a> </li>
+
+                    }
+                    @if (User.IsInRole("Administrator"))
+                    {
+
+                        <li class="nav-item"><a href="@Url.Action("Index","Roles")" class="nav-link">Roles</a> </li>
+                    }
+
+                </ul>
+                @Html.Partial("_LoginPartial")
             </div>
+
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+    </nav>
+    <div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/Imgs/a1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Tecnologia</h5>
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Imgs/a2.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Contabilidad</h5>
+
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/Imgs/a3.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Auditoria</h5>
+
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        @* ---------------------------------------------------------------------------------------------------------- *@
     </div>
-    @* ---------------------------------------------------------------------------------------------------------- *@
-</div>
-<h2>@ViewBag.Title.</h2>
-@*<h3>@ViewBag.Message</h3>*@
+    <h2>@ViewBag.Title.</h2>
+    @*<h3>@ViewBag.Message</h3>*@
 
 
-<footer class="ftco-footer ftco-section">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Technical Support</h2>
-                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+    <footer class="ftco-footer ftco-section">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Technical Support</h2>
+                        <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
 
+                    </div>
                 </div>
-            </div>
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Servicios</h2>
-                    <ul class="list-unstyled">
-                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
-                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
-                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
-                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
-                    <div class="block-23 mb-3">
-                        <ul>
-                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
-                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
-                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Servicios</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                            <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                            <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                            <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                                <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                                <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
+
+ 
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+
+    <script src="~/Scripts/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/Scripts/jquery.animateNumber.min.js"></script>
+    <script src="~/Scripts/jquery.easing.1.3.js"></script>
+    <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
+    <script src="~/Scripts/jquery.stellar.min.js"></script>
+    <script src="~/Scripts/jquery.waypoints.min.js"></script>
+    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+
+    <script src="~/Scripts/owl.carousel.min.js"></script>
+    <script src="~/Scripts/scrollax.min.js"></script>
+
+</body>
+</html>
+
