--- a/Soporte/SoporteWeb/Views/Home/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Home/Index.cshtml
@@ -1,145 +1,233 @@
-﻿@{ ViewBag.Title = "Inicio"; }
+﻿@model IEnumerable<SoporteWeb.Models.Costo>
+@{ ViewBag.Title = "Inicio";
+    Layout = null;
+    }
 @* Galeria de imagenes *@
 @* Galeria de imagenes *@
-<div>
-    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="~/IMGS/1.jpg" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Tecnologia</h5>
+@* Aqui vamos a colocar el dashboard *@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>@ViewBag.Title - Technical Support</title>
+  
+    @* Agregamos Font Awasome para agregar iconos *@
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
 
-                </div>
+
+    <link rel="stylesheet" href="~/Content/animate.css">
+
+    <link rel="stylesheet" href="~/Content/owl.carousel.min.css">
+    <link rel="stylesheet" href="~/Content/owl.theme.default.min.css">
+    <link rel="stylesheet" href="~/Content/magnific-popup.css">
+
+
+
+    <link rel="stylesheet" href="~/Content/ionicons.min.css">
+
+    <link rel="stylesheet" href="~/Content/flaticon.css">
+    <link rel="stylesheet" href="~/Content/icomoon.css">
+    <link rel="stylesheet" href="~/Content/style.css">
+
+    
+
+</head>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+        <div class="container">
+            <a class="navbar-brand" href="https://localhost:44363/"><span>Technical Support</span></a>
+            <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="oi oi-menu"></span> Menu
+            </button>
+
+            <div class="collapse navbar-collapse" id="ftco-nav">
+                <ul class="navbar-nav nav ml-auto">
+
+                    <li class="nav-item"><a href="@Url.Action("Index","Home")" class="nav-link">Inicio</a> </li>
+                    <li class="nav-item"><a href="@Url.Action("About","Home")" class="nav-link">Acerca</a> </li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li class="nav-item"><a href="@Url.Action("Index","Tipoes")" class="nav-link">Servicios</a> </li>
+                        <li class="nav-item"><a href="@Url.Action("Index","Costoes")" class="nav-link">Trabajos</a> </li>
+
+                    }
+                    @if (User.IsInRole("Administrator"))
+                    {
+
+                        <li class="nav-item"><a href="@Url.Action("Index","Roles")" class="nav-link">Roles</a> </li>
+                    }
+
+                </ul>
+                @Html.Partial("_LoginPartial")
             </div>
-            <div class="carousel-item">
-                <img src="~/IMGS/2.jpg" class="d-block w-100 " alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Contabilidad</h5>
-
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img src="~/IMGS/3.jpg" class="d-block w-100 " alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                    <h5>Auditoria</h5>
-
-                </div>
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-    @* ---------------------------------------------------------------------------------------------------------- *@
-</div>
-
-<br />
-
-<div class="jumbotron">
-    <span class="text-center"> <h1> Fortalece y crece tu negocio </h1> </span>
-
-    <div class="alert alert-info" role="alert">
-        <i class="fas fa-wrench fa-2x"></i>
-        Equipo integrado por profesionales idóneos que desempeñan sus tareas con talento y eficiencia.
-    </div>
-
-    <div class="alert alert-secondary" role="alert">
-        <i class="fas fa-address-card fa-2x"></i>
-        Nuestro equipo de profesionales trabaja incansablemente para alcanzar la máxima calidad.
-    </div>
-
-    <div class="alert alert-success" role="alert">
-        <i class="fas fa-dollar-sign fa-2x"></i>
-        Nuestros precios se ajustan a la calidad sobresaliente de los servicios que ofrecemos.
-    </div>
-
-    <div class="alert alert-danger" role="alert">
-        <i class="fas fa-handshake fa-2x"></i>
-        Nuestro principal objetivo es la satisfacción del cliente, prometemos dedicación, respeto y presición.
-    </div>
-
-
-</div>
-
-<div class="card-deck">
-    <div class="card">
-        <img src="~/IMGS/1.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title"> <i class="fas fa-desktop"></i> Tecnologia</h5>
-
-            <p class="card-text">Sabemos lo importante que es para usted el área de tecnología de su empresa, por lo que nos aseguramos de tener a los mejores ingenieros altamente calificados para atender cualquiera de sus necesidades, en cualquier momento.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
 
         </div>
-    </div>
-    <div class="card">
-        <img src="~/IMGS/2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title"> <i class="fas fa-coins"></i> Contabilidad</h5>
-            <p class="card-text">Le brindamos una Asesoría Fiscal Contable adecuada y oportuna que le permite el manejo y control de las operaciones de su compañía a través de diferentes herramientas tecnológicas de vanguardia que cumplan con las legislaciones de hoy día y satisfagan las necesidades de su empresa.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
-        </div>
-    </div>
-    <div class="card">
-        <img src="~/IMGS/3.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title"> <i class="far fa-clipboard"></i> Auditoria</h5>
-            <p class="card-text">Nuestra práctica de Auditoría está integrada por profesionales altamente calificados, experimentados y líderes en su campo de acción. Estos recursos, combinados con nuestra estructura de conocimiento, actualización y liderazgo, nos permiten proporcionarles apoyo a nuestros clientes dónde y cuándo lo necesitan, en su propio país o en el extranjero.</p>
-            <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
-        </div>
-    </div>
-</div>
-<br />
-<br />
-<h1 class="text-center">Contacto</h1>
-<div class="row">
+    </nav>
+    <div>
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/IMGS/1.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Tecnologia</h5>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6727.0743645187085!2d-117.04116161440747!3d32.538505826026594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9490694c377b9%3A0x75332eec59a5663e!2sHong%20Kong%20Gentlemen&#39;s%20Club!5e0!3m2!1ses!2smx!4v1606782005585!5m2!1ses!2smx" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-</div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/IMGS/2.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Contabilidad</h5>
 
-<footer class="ftco-footer ftco-section">
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Technical Support</h2>
-                    <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
-                   
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="~/IMGS/3.jpg" class="d-block w-100 " alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Auditoria</h5>
+
+                    </div>
                 </div>
             </div>
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Servicios</h2>
-                    <ul class="list-unstyled">
-                        <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
-                        <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
-                        <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
-                        <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
-                    </ul>
-                </div>
+            <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+        @* ---------------------------------------------------------------------------------------------------------- *@
+    </div>
+    <br />
+
+    <div class="jumbotron">
+        <span class="text-center"> <h1> Fortalece y crece tu negocio </h1> </span>
+
+        <div class="alert alert-info" role="alert">
+            <i class="fas fa-wrench fa-2x"></i>
+            Equipo integrado por profesionales idóneos que desempeñan sus tareas con talento y eficiencia.
+        </div>
+
+        <div class="alert alert-secondary" role="alert">
+            <i class="fas fa-address-card fa-2x"></i>
+            Nuestro equipo de profesionales trabaja incansablemente para alcanzar la máxima calidad.
+        </div>
+
+        <div class="alert alert-success" role="alert">
+            <i class="fas fa-dollar-sign fa-2x"></i>
+            Nuestros precios se ajustan a la calidad sobresaliente de los servicios que ofrecemos.
+        </div>
+
+        <div class="alert alert-danger" role="alert">
+            <i class="fas fa-handshake fa-2x"></i>
+            Nuestro principal objetivo es la satisfacción del cliente, prometemos dedicación, respeto y presición.
+        </div>
+
+
+    </div>
+
+    <div class="card-deck">
+        <div class="card">
+            <img src="~/IMGS/1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"> <i class="fas fa-desktop"></i> Tecnologia</h5>
+
+                <p class="card-text">Sabemos lo importante que es para usted el área de tecnología de su empresa, por lo que nos aseguramos de tener a los mejores ingenieros altamente calificados para atender cualquiera de sus necesidades, en cualquier momento.</p>
+                <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
+
             </div>
-            <div class="col-md">
-                <div class="ftco-footer-widget mb-4">
-                    <h2 class="ftco-heading-2">Lista de Contacto</h2>
-                    <div class="block-23 mb-3">
-                        <ul>
-                            <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
-                            <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
-                            <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+        </div>
+        <div class="card">
+            <img src="~/IMGS/2.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"> <i class="fas fa-coins"></i> Contabilidad</h5>
+                <p class="card-text">Le brindamos una Asesoría Fiscal Contable adecuada y oportuna que le permite el manejo y control de las operaciones de su compañía a través de diferentes herramientas tecnológicas de vanguardia que cumplan con las legislaciones de hoy día y satisfagan las necesidades de su empresa.</p>
+                <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
+            </div>
+        </div>
+        <div class="card">
+            <img src="~/IMGS/3.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"> <i class="far fa-clipboard"></i> Auditoria</h5>
+                <p class="card-text">Nuestra práctica de Auditoría está integrada por profesionales altamente calificados, experimentados y líderes en su campo de acción. Estos recursos, combinados con nuestra estructura de conocimiento, actualización y liderazgo, nos permiten proporcionarles apoyo a nuestros clientes dónde y cuándo lo necesitan, en su propio país o en el extranjero.</p>
+                <p class="card-text"><button type="button" class="btn btn-dark"><a href="https://localhost:44363/Home/Contact" class="text-white">Ver mas</a> <i class="fas fa-arrow-right"></i></button></p>
+            </div>
+        </div>
+    </div>
+    <br />
+    <br />
+    <h1 class="text-center">Contacto</h1>
+    <div class="row">
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6727.0743645187085!2d-117.04116161440747!3d32.538505826026594!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9490694c377b9%3A0x75332eec59a5663e!2sHong%20Kong%20Gentlemen&#39;s%20Club!5e0!3m2!1ses!2smx!4v1606782005585!5m2!1ses!2smx" width="100%" height="600" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+    </div>
+
+    <footer class="ftco-footer ftco-section">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Technical Support</h2>
+                        <p>Una Empresa totalmente capacitada para resolver tus problemas informáticos</p>
+
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Servicios</h2>
+                        <ul class="list-unstyled">
+                            <li><a href="#"><i class="fas fa-server"></i> Virtualización de servidores</a></li>
+                            <li><a href="#"><i class="fas fa-user-friends"></i> Soporte presencial</a></li>
+                            <li><a href="#"><i class="fas fa-laptop"></i> Soporte Remoto</a></li>
+                            <li><a href="#"><i class="fas fa-desktop"></i> Orientación Informática</a></li>
                         </ul>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="ftco-footer-widget mb-4">
+                        <h2 class="ftco-heading-2">Lista de Contacto</h2>
+                        <div class="block-23 mb-3">
+                            <ul>
+                                <li><i class="fas fa-map-marker-alt"></i><span class="text"> Calle Coahuila 2009, Zona Nte., 22000 Tijuana, B.C.</span></li>
+                                <li><i class="fas fa-phone-alt"></i><span class="text"> +52 664 111 55 44 </span></li>
+                                <li><i class="fas fa-envelope"></i><span class="text"> info@tech.net</span></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </footer>
+
+    <div>
+
+        <hr />
+        <footer>
+            <p class="text-center">&copy; @DateTime.Now.Year - Technical Support</p>
+        </footer>
     </div>
-</footer>
+
+
+    <script src="~/Scripts/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/Scripts/jquery.animateNumber.min.js"></script>
+    <script src="~/Scripts/jquery.easing.1.3.js"></script>
+    <script src="~/Scripts/jquery.magnific-popup.min.js"></script>
+    <script src="~/Scripts/jquery.stellar.min.js"></script>
+    <script src="~/Scripts/jquery.waypoints.min.js"></script>
+    <script src="~/Scripts/jquery-migrate-3.0.1.min.js"></script>
+
+    <script src="~/Scripts/owl.carousel.min.js"></script>
+    <script src="~/Scripts/scrollax.min.js"></script>
+
+</body>
+</html>
