--- a/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
+++ b/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
@@ -14,12 +14,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <!-- VENDOR CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/assets/vendor/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/assets/vendor/linearicons/style.css">
     <link rel="stylesheet" href="~/assets/vendor/chartist/css/chartist-custom.css">
+
+    @* antiguos *@
+    <link rel="stylesheet" href="~/Content/animate.css">
+
     <!-- MAIN CSS -->
+   
     <link rel="stylesheet" href="~/assets/css/main.css">
     <!-- FOR DEMO PURPOSES ONLY. You should remove this in your project -->
     <link rel="stylesheet" href="~/assets/css/demo.css">
@@ -81,7 +88,7 @@
                 <nav>
                     <ul class="nav">
                         <li><a href="@Url.Action("Index","Principal")" class="active"><i class="lnr lnr-home"></i> <span>Dashboard</span></a></li>
-                        <li><a href="@Url.Action("About","Home")" class=""><i class="lnr lnr-code"></i> <span>Acerca</span></a></li>
+                        
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li><a href="@Url.Action("Index","Costoes")" class=""><i class="lnr lnr-chart-bars"></i> <span>Trabajos</span></a></li>
