--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -24,57 +24,59 @@
 
     <div class="row justify-content-center">
         <div class="col-md-6">
+            <div class="card">
 
 
-            <div class=" card-header">
-                Lista de Trabajos
+
+                <div class=" card-header">
+                    Lista de Trabajos
+                </div>
+
+                <div class="card-body">
+                    <table class="table">
+                        <thead class="thead-dark">
+
+                            <tr>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Tipo.Name)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.DateTime)
+                                </th>
+                                <th>
+                                    @Html.DisplayNameFor(model => model.Description)
+                                </th>
+                                <th></th>
+                            </tr>
+
+                        </thead>
+
+
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Tipo.Name)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.DateTime)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Description)
+                                </td>
+                                <td>
+                                    <a href="@Url.Action("Edit", "Costoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
+                                    <a href="@Url.Action("Details", "Costoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
+                                    <a href="@Url.Action("Delete", "Costoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
+                                </td>
+                            </tr>
+                        }
+
+                    </table>
+
+                </div>
+
             </div>
-
-            <div class="card-body">
-                <table class="table">
-                    <thead class="thead-dark">
-
-                        <tr>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Tipo.Name)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.DateTime)
-                            </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Description)
-                            </th>
-                            <th></th>
-                        </tr>
-
-                    </thead>
-
-
-                    @foreach (var item in Model)
-                    {
-                        <tr>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Tipo.Name)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.DateTime)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Description)
-                            </td>
-                            <td>
-                                <a href="@Url.Action("Edit", "Costoes", new { id = item.Id })" title="Editar"><i class="fas fa-file-alt text-warning"></i></a>
-                                <a href="@Url.Action("Details", "Costoes", new { id = item.Id })" title="Ver"><i class="fas fa-eye text-info"></i></a>
-                                <a href="@Url.Action("Delete", "Costoes", new { id = item.Id })" title="Eliminar"><i class="fas fa-times-circle text-danger"></i></a>
-                            </td>
-                        </tr>
-                    }
-
-                </table>
-
-            </div>
-
-
 
         </div>
     </div>
