--- a/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Index.cshtml
@@ -21,7 +21,7 @@
 
 </p>
 
-
+<div class="container">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
@@ -80,6 +80,6 @@
 
         </div>
     </div>
-
+</div>
 
 
