--- a/Soporte/SoporteWeb/Views/Roles/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Roles/Index.cshtml
@@ -2,7 +2,13 @@
 @{
     ViewBag.Title = "Roles";
 }
-
+<div class="">
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
 
 
     <div class="container">
@@ -43,4 +49,4 @@
         </div>
 
     </div>
-  
+</div>
