--- a/Soporte/SoporteWeb/assets/css/main.css
+++ b/Soporte/SoporteWeb/assets/css/main.css
@@ -23,7 +23,8 @@ body {
   background-color: #F3F5F8;
   font-family: "Source Sans Pro", sans-serif;
   font-size: 15px;
-  color: #676a6d; }
+  color: #676a6d; 
+}
 
 a {
   color: #3287B2; }
@@ -2066,3 +2067,8 @@ ul.activity-timeline > li {
         margin-bottom: -1px;
     }
 /*# sourceMappingURL=main.css.map */
+
+.jojos{
+    padding-left:28em;
+  
+}
