--- a/Soporte/SoporteWeb/Views/Costoes/Create.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Create.cshtml
@@ -6,12 +6,12 @@
 
 
 
-    <div class="mt-3">
+    <div class="text-center">
         <h2><p class="text-black font-weight-bolder">Crear</p></h2>
     </div>
     
-        <div class="row justify-content-center">
-            <div class="col-md-6">
+        <div class="container">
+            <div class="col-md-10">
                 <div class="card">
                     @using (Html.BeginForm())
                     {
@@ -23,7 +23,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="form-group">
                                 @Html.LabelFor(model => model.DateTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
+                                <div class="col-md-6">
                                     @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
                                 </div>
@@ -31,7 +31,7 @@
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
+                                <div class="col-md-6">
                                     @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                                 </div>
@@ -39,14 +39,14 @@
 
                             <div class="form-group">
                                 @Html.LabelFor(model => model.TipoId, "TipoId", htmlAttributes: new { @class = "control-label col-md-2" })
-                                <div class="col-md-10">
+                                <div class="col-md-6">
                                     @Html.DropDownList("TipoId", null, htmlAttributes: new { @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.TipoId, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <div class="col-md-offset-2 col-md-10">
+                                <div class="col-md-offset-2 col-md-6">
                                     <input type="submit" value="Crear" class="btn btn-dark" />
                                     @Html.ActionLink("Regresar a la lista", "Index", "Costoes", new { @class = "btn btn-dark" })
                                 </div>
