--- a/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Delete.cshtml
@@ -8,10 +8,10 @@
         <h2><p class="text-black font-weight-bolder">Eliminar</p></h2>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
+    <div class="container">
+        <div class="col-md-10">
             <div class="card">
-                <h3>¿Seguro que deseas eliminarlo?</h3>
+                <h3 class="text-center">¿Seguro que deseas eliminarlo?</h3>
                 <div>
                     <h4>Costo</h4>
                     <hr />
@@ -51,6 +51,9 @@
                             @Html.ActionLink("Regresar a la lista", "Index", "Costoes", new { @class = "btn btn-dark" })
                         </div>
                     }
+                <br />
+                <br />
+
                 </div>
             </div>
 
