--- a/Soporte/SoporteWeb/Views/Costoes/Edit.cshtml
+++ b/Soporte/SoporteWeb/Views/Costoes/Edit.cshtml
@@ -9,8 +9,8 @@
         <h2><p class="text-black font-weight-bolder">Editar</p></h2>
     </div>
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
+    <div class="container">
+        <div class="col-md-10">
             <div class="card">
                 @using (Html.BeginForm())
                 {
@@ -24,7 +24,7 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.DateTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.DateTime, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.DateTime, "", new { @class = "text-danger" })
                             </div>
@@ -32,15 +32,15 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-md-6">Tipo</label>
-                            <div class="col-md-10">
+                            @Html.LabelFor(model => model.Tipo, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-6">
                                 @Html.DropDownList("TipoId", null, htmlAttributes: new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.TipoId, "", new { @class = "text-danger" })
                             </div>
