--- a/Soporte/SoporteWeb/Views/Tipoes/Edit.cshtml
+++ b/Soporte/SoporteWeb/Views/Tipoes/Edit.cshtml
@@ -9,8 +9,8 @@
     </div>
 
 
-    <div class="row justify-content-center">
-        <div class="col-md-6">
+    <div class="container">
+        <div class="col-md-10">
             <div class="card">
                 @using (Html.BeginForm())
                 {
@@ -24,14 +24,14 @@
 
                         <div class="form-group">
                             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                            <div class="col-md-10">
+                            <div class="col-md-6">
                                 @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                             </div>
                         </div>
 
                         <div class="form-group text-center">
-                            <div class="col-md-offset-2 col-md-10">
+                            <div class="col-md-offset-2 col-md-6">
                                 <input type="submit" value="Guardar" class="btn btn-dark" />
                                 @Html.ActionLink("Regresar a la lista", "Index", "Tipoes", new { @class = "btn btn-dark" })
                             </div>
