--- a/Soporte/SoporteWeb/Views/Principal/Index.cshtml
+++ b/Soporte/SoporteWeb/Views/Principal/Index.cshtml
@@ -81,7 +81,7 @@
                 <!-- VISIT CHART -->
                 <div class="panel">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Website Visits</h3>
+                        <h3 class="panel-title">Visitas de la pagina</h3>
                         <div class="right">
                             <button type="button" class="btn-toggle-collapse"><i class="lnr lnr-chevron-up"></i></button>
                             <button type="button" class="btn-remove"><i class="lnr lnr-cross"></i></button>
