--- a/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
+++ b/Soporte/SoporteWeb/Views/Shared/_Layout.cshtml
@@ -155,7 +155,7 @@
 
             // visits trend charts
             data = {
-                labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'],
+                labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun', 'Jul', 'Ago', 'Sep', 'Oct', 'Nov', 'Dic'],
                 series: [{
                     name: 'series-real',
                     data: [200, 380, 350, 320, 410, 450, 570, 400, 555, 620, 750, 900],
@@ -198,7 +198,7 @@
 
             // visits chart
             data = {
-                labels: ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'],
+                labels: ['Lun', 'Mar', 'Mie', 'Jue', 'Vie', 'Sab', 'Dom'],
                 series: [
                     [6384, 6342, 5437, 2764, 3958, 5068, 7654]
                 ]
